# android-to-windows-streaming

./: .gitignore  AUDIO_FIX_SUMMARY.md  BROKEN_PIPE_FIX.md  BUG_FIXES_SUMMARY.md  CHANGELOG.txt  CONFIG_FIX_SUMMARY.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  OVERVIEW.txt  PROJECT_STRUCTURE.txt  QUICK_START_TESTING.md  README.txt  SETUP_GUIDE.txt  STATUS.txt  TROUBLESHOOTING.txt  VIDEO_CONFIG_FIX.md  quick_start.bat
.cursor/plans/: android-to-windows-streaming-bdcf5d9d.plan.md  surface-based-camera-control-c7159cb0.plan.md  virtucore-45e60fc9.plan.md
.cursor/rules/: project-standards.mdc  token-optimization.mdc
android-app/: build.gradle.kts  proguard-rules.pro  rebuild.bat  settings.gradle.kts
android-app/src/main/: AndroidManifest.xml
android-app/src/main/res/layout/: activity_main.xml
android-app/src/main/res/values/: strings.xml  themes.xml
protocol/: Protocol.kt  protocol.py  protocol_spec.json
virtual-camera/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  VirtualCamera.def  build.bat  register.bat  unregister.bat
virtual-camera/.cursor/plans/: virtual-camera-microphone-drivers-aaefaf54.plan.md
virtual-camera/avstream-camera/: install.bat  sources  uninstall.bat
virtual-camera/avstream-camera/inc/: vcam_common.h
virtual-camera/avstream-camera/inf/: vcam.inf
virtual-camera/avstream-camera/src/: vcam_driver.c  vcam_filter.c  vcam_formats.c  vcam_ioctl.c  vcam_pin.c
virtual-camera/examples/: README.md  python_camera_example.py  python_microphone_example.py  requirements.txt
virtual-camera/include/: SharedMemory.h  VCamFilter.h  VCamPin.h  common.h
virtual-camera/portcls-microphone/: install.bat  sources  uninstall.bat
virtual-camera/portcls-microphone/inc/: vmic_common.h
virtual-camera/portcls-microphone/inf/: vmic.inf
virtual-camera/portcls-microphone/src/: vmic_driver.c  vmic_loopback.c  vmic_miniport.c  vmic_stream.c  vmic_topology.c
virtual-camera/src/: DllMain.cpp  Register.cpp  SharedMemory.cpp  VCamFilter.cpp  VCamPin.cpp
virtual-camera/wrapper/: CMakeLists.txt  README.md  VirtuCoreAPI.h
windows-app/: OBS_SETUP.md  QUICK_START.md  START_HERE.md  VIRTUAL_DEVICES_README.md  VIRTUCORE_README.md  enable_obs_camera.bat  main.py  requirements.txt  run.bat  setup.bat  setup_virtual_devices.py  start.bat  test_virtual_devices.py
windows-app/control/: __init__.py  commands.py
windows-app/protocol/: __init__.py  protocol.py
windows-app/streaming/: __init__.py  connection.py  decoder.py  receiver.py
windows-app/ui/: main_window.py
windows-app/virtual_camera/: __init__.py  audio_setup.py  device_manager.py  interface.py  obs_controller.py  virtucore_camera.py  virtucore_microphone.py
(+9 files in other folders)
